
(customize-set-variable 'mouse-wheel-scroll-amount
                        '(5 ((shift) . 1) ((control) . nil)))

By default, the font size will be changed in the window that the mouse
pointer is over.  To change this behaviour, you can customize the
option 'mouse-wheel-follow-mouse'.  Note that this will also affect
scrolling.


* Lisp Changes in Emacs 27.1

** 'reveal-mode' can now also be used for more than to toggle between
invisible and visible: It can also toggle 'display' properties in
overlays.  This is only done on 'display' properties that have the
'reveal-toggle-invisible' property set.

+++
** 'process-contact' now takes an optional NO-BLOCK parameter to allow
not waiting for a process to be set up.

+++
** The new 'quit-window-hook' is now run first when executing the
'quit-window' command.

** The variables 'help-enable-completion-auto-load',
'help-enable-auto-load' and 'vhdl-project-auto-load', as well as the
'vhdl-auto-load-project' have been renamed to have "autoload" without
the hyphen in their names.  Obsolete aliases from the old names have
been added.

+++
** Buttons (created with 'make-button' and related functions) can
now use the 'button-data' property.  If present, the data in this
property will be passed on to the 'action' function instead of the
button itself in 'button-activate'.

** 'defcustom' now takes a ':local' keyword that can be either t or
'permanent', which mean that the variable should be automatically
buffer-local.  'permanent' also sets the variable's 'permanent-local'
property.

+++
** The new macro 'with-suppressed-warnings' can be used to suppress
specific byte-compile warnings.

+++
** The new macro 'ignore-error' is like 'ignore-errors', but takes a
specific error condition, and will only ignore that condition.  (This
can also be a list of conditions.)

---
** The new function 'byte-compile-info-message' can be used to output
informational messages that look pleasing during the Emacs build.

---